fix: tasks.mdを更新。project.pbxprojをgitignoreに追加

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 # Xcode user-specific data
 ios/RealFightingGame.xcodeproj/xcuserdata/
 ios/RealFightingGame.xcodeproj/project.xcworkspace/xcuserdata/
+ios/RealFightingGame.xcodeproj/project.pbxproj
 
 ios/.module-cache/
 
